webdev/base/shared/str8ts.css
/*
 * SPDX-FileCopyrightText: 2020 Luis Walter, 2025-2026 Moritz Ringler
 *
 * SPDX-License-Identifier: GPL-3.0-or-later
 */

:root {
  --color-border: black;
  --color-dialog-background: whitesmoke;
  --color-button-background: #b1cffc;
  --color-button-active: #335;
  --color-button-hover-shadow: #ccc;
  --color-counter-text: #afafaf;
  --color-cell-border: #113;
  --color-finished-border: #0c0;
  --color-transparent: rgb(0 0 0 / 0%);
  --color-background: white;
  --color-foreground: black;
  --color-mini: black;
  --color-link: #00e;
  --color-visited-link: #551a8b;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-border: #aaa;
    --color-dialog-background: #333;
    --color-button-background: #555;
    --color-button-active: #e7d9cdff;
    --color-button-hover-shadow: #888;
    --color-counter-text: #ccc;
    --color-finished-border: #0f0;
    --color-transparent: rgb(255 255 255 / 0%);
    --color-background: black;
    --color-foreground: #ccc;
    --color-mini: black;
    --color-link: #4d9eff;
    --color-visited-link: #aa7dff;
  }
}

/* latin */
@font-face {
  font-family: Nunito;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('fonts/XRXV3I6Li01BKofINeaB.woff2') format('woff2');
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
    U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212,
    U+2215, U+FEFF, U+FFFD;
}

/* latin */
@font-face {
  font-family: Nunito;
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url('fonts/XRXV3I6Li01BKofINeaB.woff2') format('woff2');
  unicode-range:
    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
    U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212,
    U+2215, U+FEFF, U+FFFD;
}

div,
span,
td,
tr {
  padding: 0;
  margin: 0;
  font-family: Nunito, sans-serif;
  -webkit-touch-callout: none;
  user-select: none;
}

body,
html {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
  background-color: var(--color-background);
  color: var(--color-foreground);
}

.wrapper {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.container {
  border: 1px solid var(--color-border);
  margin: 10px 25px;
}

.row {
  margin: 0;
  padding: 0;
}

.cell {
  height: 41px;
  width: 41px;
  border: 1px solid var(--color-cell-border);
  margin: 0;
  padding: 2px;
  text-align: center;
  font-weight: 600;
}

.controls {
  margin: 10px 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button {
  height: 40px;
  text-align: center;
  font-size: 20pt;
  border-radius: 10px;
  background-color: var(--color-button-background);
}

.hint {
  text-shadow: 0 0 5px red;
}

.button[disabled] {
  opacity: 0.5;
  cursor: not-allowed;
  pointer-events: none;
  filter: grayscale(60%);
}

@media (prefers-color-scheme: dark) {
  .button {
    opacity: 0.8;
  }
}

.num {
  width: 80px;
  font-weight: 600;
}

.num-small {
  width: 35px;
  height: 35px;
  font-weight: 600;
}

.set {
  width: 123px;
}

.set-slim {
  width: 80px;
}

.set-slimmer {
  width: 50px;
  font-size: 16pt;
}

.button:hover {
  box-shadow: 2px 2px var(--color-button-hover-shadow);
}

.button:active {
  background-color: var(--color-button-active);
}

.line {
  margin: 7px;
  width: 254px;
}

.counter-text {
  text-align: center;
  color: var(--color-counter-text);
  font-size: 10pt;
}

.mini {
  text-align: center;
  margin: -2px 0;
  width: 100%;
  font-size: 8pt;
  font-weight: 600;
  color: var(--color-mini);
  pointer-events: none;
}

table.mini tr,
table.mini td {
  pointer-events: none;
}

.transparent {
  color: var(--color-transparent);
}

.finished {
  border: 15px solid var(--color-finished-border);
}

.dialog-outer-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.dialog-inner-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dialog-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--color-border);
  opacity: 0.2;
}

.dialog {
  display: none;
  background-color: var(--color-dialog-background);
  border-radius: 10px;
  padding: 15px;
  padding-bottom: 20px;
  width: 235px;
  position: relative;
  max-height: 90vh;
}

.close-button {
  position: absolute;
  right: 15px;
  top: 15px;
  cursor: pointer;
  font-size: 20px;
  line-height: 20px;
  color: var(--color-foreground);
}

.dialog-title {
  font-weight: bold;
  font-size: 20px;
  margin-bottom: 5px;
}

.dialog-text {
  padding-bottom: 20px;
}

.dialog-button {
  display: inline-block;
  margin-top: 10px;
  margin-bottom: 10px;
  padding: 5px;
  border-radius: 3px;
  font-weight: bold;
  background: linear-gradient(#0000, rgb(0 0 0/10%)) top/100% 800%;
  background-color: var(--color-button-background);
  transition: 0.2s;
}

.dialog-button:hover {
  background-position: bottom;
}

.full-width {
  width: 225px;
  text-align: center;
}

.dialog-new {
  padding-bottom: 20px;
}

.slider {
  width: 220px;
  margin-top: 5px;
  padding-top: 2px;
}

.dialog-text-input {
  padding: 3px;
  border-radius: 3px;
}

.copy-button {
  background-color: var(--color-button-background);
  margin-left: 5px;
  padding: 0 3px;
  border-radius: 3px;
}

.generating-new-game-dialog {
  text-align: center;
}

.loading-ring {
  display: inline-block;
  width: 80px;
  height: 80px;
}

.loading-ring::after {
  content: ' ';
  display: block;
  width: 64px;
  height: 64px;
  border-radius: 50%;
  border: 6px solid var(--color-button-background);
  border-color: var(--color-button-background) transparent;
  animation: loading-ring 1.2s linear infinite;
}

@keyframes loading-ring {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

a {
  color: var(--color-link);
}

a:visited {
  color: var(--color-visited-link);
}

.carousel {
  width: 100%;
  margin: 0 auto;
}

.carousel-slide {
  text-align: center;
  padding: 0 10px;
  box-sizing: border-box;
}

.carousel-slide img {
  margin: 5px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.history {
  position: relative;
  max-height: 250px;
  overflow-y: scroll;
  margin-right: -15px;
  padding-right: 15px;
}

.history-entry {
  display: flex;
  gap: 8px;
  align-items: center;
  padding: 6px;
  margin-bottom: 6px;
}

.history-canvas {
  width: 100px;
  height: 100px;
  flex-shrink: 0;
}

.history-info {
  font-size: 9pt;
}

